# claude-ecosystem-coordinator

./: .gitignore  README.md  pyproject.toml
compose/: docker-compose.yml
configs/: mcp-servers.json.template  services-docker.yaml  services-local.yaml
helm/ecosystem/: Chart.yaml  values.yaml
helm/ecosystem/templates/: NOTES.txt  _helpers.tpl  ingress-grpc.yaml  ingress.yaml
kustomize/overlays/local/: README.md  image-registry-patch.yaml  kustomization.yaml  namespace.yaml  resource-limits-patch.yaml  service-nodeport-patch.yaml  storage-class.yaml
scripts/: dev-down.sh  dev-logs.sh  dev-status.sh  dev-up.sh  generate-mcp-config.sh
