[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-ecosystem-coordinator"
version = "0.1.0"
description = "Orchestration and Docker Compose for Claude ecosystem services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kyle Owens", email = "kyle@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "docker>=7.0.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-docker>=2.0",
]

[project.scripts]
ecosystem-coordinator = "coordinator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["coordinator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
